2024-04-19T01:13:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8746906919 # 387
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-19
* notice: query file size: 24483
* notice: accum prev / next / diff: re vi: 0 277 / 0 279 / +0 +2

2024-04-18T16:21:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8741376382 # 385
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-18
* notice: query file size: 24665
* notice: accum prev / next / diff: re vi: 0 276 / 0 277 / +0 +1

2024-04-18T08:21:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8734689901 # 383
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-18
* notice: query file size: 24493
* notice: accum prev / next / diff: re vi: 0 275 / 0 276 / +0 +1

2024-04-17T12:31:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8721917454 # 378
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-17
* notice: query file size: 24483
* notice: accum prev / next / diff: re vi: 0 273 / 0 275 / +0 +2

2024-04-17T08:20:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8718627376 # 377
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-17
* notice: query file size: 24501
* notice: accum prev / next / diff: re vi: 0 272 / 0 273 / +0 +1

2024-04-16T12:31:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8705641318 # 372