@@ -1,3 +1,9 @@
+2024-04-19T04:19:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8748337521 # 388
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-19
+* notice: query file size: 24499
+* notice: accum prev / next / diff: re vi: 0 279 / 0 283 / +0 +4
+
 2024-04-19T01:13:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8746906919 # 387
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-19
